--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.15.2",
+    "element-plus": "^1.0.2-beta.55",
     "vue": "^3.1.5",
     "vue-router": "^4.0.10"
   },
